2011-05-24  Jim Meyering  <meyering@redhat.com>

	utimensat: do not reference an out-of-scope buffer
	Otherwise, with __linux__ defined, "times" would point to a buffer, "ts"
	declared in an inner scope, yet "times" would be dereferenced outside
	the scope in which "ts" was valid.
	* lib/utimensat.c (rpl_utimensat) [__linux__]: Move the declaration
	of ts[2] "out/up", so that the use of aliased "times" (via "times = ts;")
	does not end up referencing an out-of-scope "ts"

	opendir-safer.c: don't clobber errno; don't close negative FD
	* lib/opendir-safer.c (opendir_safer):
	[HAVE_FDOPENDIR || GNULIB_FDOPENDIR]: Don't close a negative
	file descriptor, and more importantly, don't clobber the
	offending errno value with EINVAL.  Before, upon failure
	of dup_safer, we would pass the negative file descriptor to
	fdopendir, which would clobber errno.

2011-05-23  Bruno Haible  <bruno@clisp.org>

	idcache: Fix module description.
	* modules/idcache (Include): Set to "idcache.h".

2011-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	gnulib-tool: fix portability problem with MacOS sed
	A sed command like "/x/{s/a/b/}" is not portable; a newline is needed
	before the "}".  Problem reported by Leo in
	<http://lists.gnu.org/archive/html/emacs-devel/2011-05/msg00717.html>.
	* gnulib-tool (func_modules_transitive_closure): Insert newlines in
	sed_extract_condition1, sed_extract_condition2.

2011-05-23  Bruno Haible  <bruno@clisp.org>

	getugroups: Fix module description.
	* modules/getugroups (Include): Set to "getugroups.h".

2011-05-23  Bruno Haible  <bruno@clisp.org>
	    Eric Blake  <eblake@redhat.com>

	linkat, renameat: Update dependencies.
	* modules/renameat (Depends-on): Add dosname, save-cwd. Remove stpcpy.
	* modules/linkat (Depends-on): Likewise. Remove also readlink,
	symlinkat.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	verify: fix bug when gnulib <assert.h> is also included
	* lib/verify.h (verify, verify_true): Define if _GL_VERIFY_H